Add timezone labels throughout codebase to avoid UTC/EST confusion
- Add EST timezone labels to generated reports (markdown and HTML)
- Add timezone comments to iteration-schedule.yml file
- Update print statements in scripts to include EST/Eastern Time labels
- Update workflow output messages with timezone information
- All dates are now explicitly marked as EST (Eastern Standard Time)

This prevents confusion like the iteration 69/70 issue where dates could be
misinterpreted as UTC instead of Eastern Time.

--- a/.github/iteration-schedule.yml
+++ b/.github/iteration-schedule.yml
@@ -1,3 +1,5 @@
-next_iteration_start_date: '2025-12-14'
-previous_iteration_name: Iteration 69
-last_updated: '2025-12-14T00:21:44.258279-05:00'
+# Iteration Schedule - All dates in EST (Eastern Standard Time)
+next_iteration_start_date: '2025-12-29'
+previous_iteration_name: Iteration 70
+last_updated: '2025-12-15T16:33:26.387111-05:00'
+_timezone_note: All dates are in EST (Eastern Standard Time)
