--- a/.github/iteration-schedule.yml
+++ b/.github/iteration-schedule.yml
@@ -1,5 +1,5 @@
-# Iteration Schedule - All dates in EST (Eastern Standard Time)
+# Iteration Schedule - All dates in EST (Eastern Time)
 next_iteration_start_date: '2025-12-29'
 previous_iteration_name: Iteration 70
-last_updated: '2025-12-15T16:33:26.387111-05:00'
-_timezone_note: All dates are in EST (Eastern Standard Time)
+last_updated: '2025-12-15T16:36:30.749432-05:00'
+_timezone_note: All dates are in EST (Eastern Time)
